--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="page__container">
       <div class="game__container">
         <button class="btn__home"><img src="./assets/images/icons/home.svg" alt="inicio"></button>
-        <div id="home__screen" class="container">
+        <div id="home" class="container">
           <h1>BREAK GAME</h1>
           <div>
             <button class="btn__play">JUGAR</button>
@@ -52,6 +52,10 @@
           <h2>FIN DEL JUEGO</h2>
         </div>
         <canvas class="canvas"></canvas>
+        <div class="movement_container">
+          <button id="btn__left"><img src="./assets/images/icons/arrow-left.svg" alt="flecha izquierda"></button>
+          <button id="btn__right"><img src="./assets/images/icons/arrow-right.svg" alt="flecha derecha"></button>
+        </div>
       </div>
     </div>
   </body>
