--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div id="game__over" class="container">
-          <h2>FIN DEL JUEGO</h2>
+          <h2 id="game__over__h2"></h2>
         </div>
         <canvas class="canvas"></canvas>
         <div class="movement_container">
