--- a/index.html
+++ b/index.html
@@ -12,52 +12,47 @@
     <title>breakGame</title>
   </head>
   <body>
-    <div class="page__container">
-      <div class="game__container">
-        <button class="btn__home"><img src="./assets/images/icons/home.svg" alt="inicio"></button>
+    <div id="page__container">
+      <div>
+        <button id="btn__home"><img src="./assets/images/icons/home.svg" alt="inicio"></button>
         <section id="home" class="container">
           <h1>BREAK GAME</h1>
           <div>
-            <button class="btn__play">JUGAR</button>
-            <button class="btn__maps">MAPAS</button>
-            <button class="btn__config">CONFIGURACIÓN</button>
+            <button id="btn__play">JUGAR</button>
+            <button id="btn__maps">MAPAS</button>
+            <button id="btn__config">CONFIGURACIÓN</button>
           </div>
         </section>
         <section id="maps" class="container">
           <h2>MAPAS</h2>
           <div id="maps__container">
-            <div class="map__a">
-              <img src="./assets/images/maps/galaxia.jfif" alt="">
+            <div id="map__a">
+              <img src="./assets/images/maps/galaxia.jfif" alt="galaxia">
               <span>GALAXIA</span>
             </div>
-            <div class="map__b">
-              <img src="./assets/images/maps/desierto.jfif" alt="">
+            <div id="map__b">
+              <img src="./assets/images/maps/desierto.jfif" alt="desierto">
               <span>DESIERTO</span>
             </div>
-            <div class="map__c">
-              <img src="./assets/images/maps/océano.jfif" alt="">
+            <div id="map__c">
+              <img src="./assets/images/maps/océano.jfif" alt="océano">
               <span>OCÉANO</span>
             </div>
           </div>
         </section>
         <section id="config" class="container">
           <h2>DIFICULTAD</h2>
-          <div class="container__desktop">
-            <button class="btn__easy__desktop">FÁCIL</button>
-            <button class="btn__medium__desktop">MEDIA</button>
-            <button class="btn__hard__desktop">DIFÍCIL</button>
-          </div>
-          <div class="container__mobile">
-            <button class="btn__easy__mobile">FÁCIL</button>
-            <button class="btn__medium__mobile">MEDIA</button>
-            <button class="btn__hard__mobile">DIFÍCIL</button>
+          <div>
+            <button id="btn__easy">FÁCIL</button>
+            <button id="btn__medium">MEDIA</button>
+            <button id="btn__hard">DIFÍCIL</button>
           </div>
         </section>
         <section id="game__over" class="container">
           <h2 id="game__over__h2"></h2>
         </section>
-        <canvas class="canvas"></canvas>
-        <section class="movement_container">
+        <canvas id="canvas"></canvas>
+        <section id="movement_container">
           <button id="btn__left"><img src="./assets/images/icons/arrow-left.svg" alt="flecha izquierda"></button>
           <button id="btn__right"><img src="./assets/images/icons/arrow-right.svg" alt="flecha derecha"></button>
         </section>
